--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "ava": "^0.23.0",
     "rimraf": "^2.6.2",
     "typescript": "latest"
+  },
+  "dependencies": {
+    "transliteration": "^1.6.6"
   }
 }
