--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ournet/news-domain",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Ournet news domain module",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -36,13 +36,16 @@
   },
   "homepage": "https://github.com/ournet/news-domain#readme",
   "devDependencies": {
+    "@types/joi": "^13.4.4",
     "@types/node": "latest",
     "ava": "^0.23.0",
     "rimraf": "^2.6.2",
     "typescript": "latest"
   },
   "dependencies": {
+    "@ournet/domain": "^0.3.1",
     "ellipsize": "^0.1.0",
+    "joi": "^13.6.0",
     "transliteration": "^1.6.6"
   }
 }
