--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "pretest": "npm run clean && npm run tsc",
-    "test": "ava --no-cache --verbose lib/**/*.test.js",
     "posttest": "npm run clean-test-code",
     "tsc": "tsc",
     "tscw": "tsc -w",
@@ -38,14 +37,13 @@
   "devDependencies": {
     "@types/joi": "^13.4.4",
     "@types/node": "latest",
-    "ava": "^0.23.0",
     "rimraf": "^2.6.2",
     "typescript": "latest"
   },
   "dependencies": {
-    "@ournet/domain": "^0.3.4",
+    "@ournet/domain": "^0.x.x",
     "ellipsize": "^0.1.0",
     "joi": "^13.6.0",
-    "transliteration": "^1.6.6"
+    "transliteration": "^2.2.0"
   }
 }
