--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ournet/news-domain",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Ournet news domain module",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -41,7 +41,7 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "@ournet/domain": "^0.x.x",
+    "@ournet/domain": "^0.3.6",
     "ellipsize": "^0.1.0",
     "joi": "^13.6.0",
     "transliteration": "^2.2.0"
